src/server/storage/entities.xsl
@@ -223,9 +223,6 @@ set<xsl:value-of select="$methodName"/>(<xsl:call-template name="argument"/>)
           <xsl:when test="starts-with(@type, 'enum')">
             static_cast&lt;<xsl:value-of select="@enumType"/>&gt;(qb.query().value( valueIndex ).value&lt;int&gt;())
           </xsl:when>
-          <xsl:when test="starts-with(@type, 'QDateTime')">
-            Utils::variantToDateTime(qb.query().value(valueIndex))
-          </xsl:when>
           <xsl:otherwise>
             qb.query().value( valueIndex ).value&lt;<xsl:value-of select="@type"/>&gt;()
           </xsl:otherwise>
